# dsan5400-project

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  eval.ipynb  eval.py  model_training.ipynb  pyproject.toml  setup.py
notebooks/: eda.ipynb
outputs/: architecture.drawio  recipe.html  results.md
recipe_simplifier/: parser.py
scripts/: hyperparam_tuning.py  iterator.py  main.py  preprocessing.py
src/recipe_simplifier/: __init__.py  cli.py  parser.py  recipe.py  summarizer.py  utils.py
src/recipe_simplifier/eval/: __init__.py  eval.py
summarizer/: results.md  summarizer.py
summarizer/eval/: eval.py
summarizer/utils/: __init__.py
tests/: __init__.py  test_main.py
