[project]
name = "recipe-simplifier"
version = "0.1.0"
description = "Simplifies Recipe Text"
readme = "README.md"
authors = [
    { name = "Eleanor Byrd", email = "eb1481@georgetown.edu" }, 
    { name = "Maura Mann", email = "mm5514@georgetown.edu" },
    { name = "Nkemdibe Okweye", email = "no252@georgetown.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "cloudscraper>=1.2.71",
    "matplotlib>=3.10.8",
    "multiextractivesummarizer>=0.2.3",
    "nltk>=3.9.4",
    "recipe-scrapers>=15.11.0",
    "sentence-transformers>=5.4.1",
    "textstat>=0.7.13",
]

[project.scripts]
recipe-simplifier = "recipe_simplifier.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402"]  # E402 = module level import not at top of file, necessary for logging config before module import 
